# Fluvel

./: .gitignore  CHANGELOG.md  LICENCE  MenuBar.toml  README.md  appconfig.json  appconfig.toml  main.py  pyproject.toml  pyside__init__.py  requirements.txt  test.py
components/: __init__.py  readme.txt
components/Buttons/: PushButtons.py  PushButtons_alt.py  PushButtons_op2.py
components/Labels/: FluvelAlertLabel.py  Label.py
components/Main/: Windows.py
components/gui/: StyledText.py  TextVar.py  __init__.py
components/layouts/: FormLayout.py  HBoxLayout.py  VBoxLayout.py  __init__.py
components/widgets/: FluvelWidget.py
controllers/: __init__.py  content_controller.py
core/: App.py  AppConfig.py  AppWindow.py  Config.py  FluvelLayout.py  GlobalConfig.py  GlobalContent.py  MenuBar.py  ViewBuilder.py  __init__.py
core/core_models/: FluvelTextWidget.py
core/core_utils/: __init__.py  config_loader.py  doc_utils.py  generate_menu_options.py  theme_loader.py
core/exceptions/: __init__.py  exceptions.py
docs/src/: content_rules.md  menu_rules.md
fluvel/: __init__.py  appconfig.toml  main.py
fluvel/_user/: Config.py  GlobalConfig.py  MenuOptions.py  UserGlobalConfig.py  __init__.py
fluvel/cli/: cli.py  paths.py  root_path.py
fluvel/components/: __init__.py
fluvel/core/: App.py  (+9 more)
project/: GlobalConfig.py  MenuOptions.py  __init__.py  full_menu_options.txt
src/: __init__.py
test/: test.py
utils/: __init__.py  config_loader.py  helper_functions.py  paths.py  resource_loader.py
views/: Demo.py  Login.py  MainWindow.py  main_window.py
(+309 files in other folders)
